feat(SS): Security server maintenance mode management requests in UI
add translations, small fixes

Refs: XRDDEV-2887

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -353,6 +353,8 @@
     },
     "action_not_possible": "Action is not possible",
     "additional_member_already_exists": "Additional member already exists",
+    "already_disabled_maintenance_mode": "Maintenance mode is already disabled",
+    "already_enabled_maintenance_mode": "Maintenance mode is already enabled",
     "anchor_already_exists": "Anchor already exists",
     "anchor_file_not_found": "Anchor file not found",
     "anchor_not_found": "Anchor not found",
@@ -427,6 +429,7 @@
     "local_group_member_not_found": "Local group member not found",
     "local_group_not_found": "Local group not found",
     "malformed_anchor": "Malformed anchor",
+    "maintenance_mode_change_request_already_submitted": "Maintenance mode change is already pending",
     "malformed_url": "Malformed URL",
     "management_request_sending_failed": "Sending of management request failed",
     "member_already_owner": "Member is already the owner",
