feat: prototype for traffic visualisation
Refs: XRDDEV-2894

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -948,6 +948,10 @@
     "settings": {
       "backupAndRestore": "Backup And Restore",
       "systemParameters": "System Parameters"
+    },
+    "diagnostics": {
+      "overview": "Overview",
+      "traffic": "Traffic"
     }
   },
   "token": {
