--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -22,6 +22,12 @@
   "alert": {
     "warningCount": "Amount of same warnings"
   },
+  "adminUsers": {
+    "role": {
+      "XROAD_SECURITYSERVER_OBSERVER": "Server Observer",
+      "XROAD_SERVICE_ADMINISTRATOR": "Service Administrator"
+    }
+  },
   "apiKey": {
     "role": {
       "XROAD_SECURITYSERVER_OBSERVER": "Server Observer",
@@ -947,7 +953,8 @@
     },
     "settings": {
       "backupAndRestore": "Backup And Restore",
-      "systemParameters": "System Parameters"
+      "systemParameters": "System Parameters",
+      "adminUsers": "Admin Users"
     }
   },
   "token": {
