--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -304,6 +304,25 @@
         "UNKNOWN": "Unknown"
       },
       "title": "Timestamping"
+    },
+    "traffic": {
+      "period": "Period",
+      "periodInfo": "Select start and end",
+      "date": "Date",
+      "time": "Time",
+      "party": "Party",
+      "partyInfo": "Service, subsystem, member",
+      "client": "Client",
+      "service": "Service",
+      "exchangeRole": "Exchange role",
+      "exchangeRoleInfo": "Producer or Consumer",
+      "producer": "Producer",
+      "status": "Status",
+      "statusInfo": "Message exchange status",
+      "success": "Success",
+      "failure": "Failure",
+      "successfulRequests": "Successful requests",
+      "failedRequests": "Failed requests"
     }
   },
   "endpoints": {
