--- a/src/security-server/admin-service/ui/src/locales/et.json
+++ b/src/security-server/admin-service/ui/src/locales/et.json
@@ -252,6 +252,25 @@
         "UNKNOWN": "Tundmatu olek"
       },
       "title": "Ajatembeldus"
+    },
+    "traffic": {
+      "period": "Periood",
+      "periodInfo": "Vali algus ja lõpp",
+      "date": "Kuupäev",
+      "time": "Kell",
+      "party": "Osapool",
+      "partyInfo": "Teenus, alamsüsteem, liige",
+      "client": "Klient",
+      "service": "Teenus",
+      "exchangeRole": "Roll",
+      "exchangeRoleInfo": "Teenusepakkuja või Klient",
+      "producer": "Teenusepakkuja",
+      "status": "Staatus",
+      "statusInfo": "Edukad või ebaõnnestunud päringud",
+      "success": "Edukas",
+      "failure": "Ebaõnnestunud",
+      "successfulRequests": "Edukad päringud",
+      "failedRequests": "Ebaõnnestunud päringud"
     }
   },
   "endpoints": {
