feat: security server traffic visualisation
Refs: XRDDEV-2894

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -322,7 +322,9 @@
       "success": "Success",
       "failure": "Failure",
       "successfulRequests": "Successful requests",
-      "failedRequests": "Failed requests"
+      "failedRequests": "Failed requests",
+      "disabledTitle": "Operational Data Monitoring Is Disabled",
+      "disabledMessage": "Operational data monitoring is disabled for this Security Server. To enable it, please install the operational data monitoring add-on (xroad-addon-opmonitoring)."
     }
   },
   "endpoints": {
