--- a/src/security-server/admin-service/ui/src/locales/et.json
+++ b/src/security-server/admin-service/ui/src/locales/et.json
@@ -48,6 +48,12 @@
     "signCertificate": "Allkirjasertifikaat",
     "state": "Olek"
   },
+  "certificate": {
+    "hash": "Sertifikaadi Räsi",
+    "notAfter": "Mitte Pärast",
+    "notBefore": "Mitte Enne",
+    "subjectDistinguishedName": "Subjekti Eristusnimi"
+  },
   "certificateProfile": {
     "COMMON_NAME": "Üldnimi (CN)",
     "COUNTRY_CODE": "Maakood (C)",
@@ -96,12 +102,19 @@
         "confirmTitle": "Kustuta võti ja sertifikaat",
         "success": "Sertifikaat kustutatud"
       },
+      "renameSubsystem": {
+        "changeAdded": "Alamsüsteemi nime muudatus oli edukas ning rakendadakse kliendi registreerimisel",
+        "changeSubmitted": "Alamsüsteemi nime muutmise taotlus oli edukas",
+        "title": "Muuda alamsüsteemi nime"
+      },
       "unregister": {
         "confirmText": "Kas soovite selle kliendi nimekirjast kustutada?",
         "confirmTitle": "Kustuta klient nimekirjast",
         "success": "Klient nimekirjast kustutatud"
       }
     },
+    "defaultSubsystemNameTooltip": "Alamsüsteemi nimi ei ole määratud",
+    "forbiddenDisable": "Haldusteenuse pakkujat ei saa välja lülitada",
     "id": "ID",
     "member": "Liige",
     "memberClass": "Liikmeklass",
@@ -116,11 +129,15 @@
       "disablingInProgress": "TOIMUB BLOKEERIMINE",
       "enablingInProgress": "TOIMUB AKTIVEERIMINE",
       "globalError": "GLOBAALNE VIGA",
+      "nameSet": "Nime muutus rakendub alamsüsteemi registreerimisel",
+      "nameSubmitted": "Nime muutmise taotlus on saadetud",
       "registered": "REGISTREERITUD",
       "registrationInProgress": "TOIMUB REGISTREERIMINE",
       "saved": "SALVESTATUD"
     },
     "subsystemCode": "Alamsüsteemi kood",
+    "subsystemName": "Alamsüsteemi nimi",
+    "subsystemTitleSuffix": " (@:general.subsystem)",
     "unknownMember": "tundmatu liige"
   },
   "clients": {
@@ -161,6 +178,7 @@
     "addOnStatus": {
       "messageLogDisabled": "Konfiguratsiooniga blokeeritud"
     },
+    "downloadReport": "Salvesta Diagnostika Raport",
     "encryption": {
       "backup": {
         "configuredKeyId": "Konfigureeritud võtme ID",
@@ -215,14 +233,38 @@
         "false": "Blokeeritud",
         "true": "Aktiveeritud"
       },
-      "failureEnabled": "Tõrketeated",
       "help": {
         "description": "Sõltuvalt konfiguratsioonist saadetakse konfigureeritud adressaatidele automaatselt emaili teavitused järgmiste sündmuste kohta: autentimissertifikaadi uuendamine ACME kaudu õnnestus / ebaõnnestus, allkirjastamise sertifikaadi uuendamine ACME kaudu õnnestus / ebaõnnestus, autentimissertifikaadi registreerimine õnnestus. Meiliteatiste lubamine nõuab turvaserveri konfiguratsiooni muutmist. Lisateavet leiate turvaserveri User Guide dokumentatsioonist.",
         "title": "Erinevad emaili teavituste staatused"
       },
-      "recipientsEmails": "E-kirjade saajad",
-      "successEnabled": "Õnnestumisteated",
-      "title": "Emaili teavituste staatus"
+      "recipientsEmails": "Saajate e-post aadressid",
+      "status": "Staatus",
+      "sentTestMail": "Saada test meil",
+      "title": "Meili teavituse staatus",
+      "type": {
+        "ACME_FAILURE": "ACME tõrke teavitused",
+        "ACME_SUCCESS": "ACME õnnestumise teavitused",
+        "AUTH_CERT_REGISTERED": "AUTH sertifikaadi registreerimise teavitused",
+        "ACME_CERT_AUTOMATICALLY_ACTIVATED": "ACME sertifikaadi automaatse aktiveerimise teavitused",
+        "ACME_CERT_AUTOMATIC_ACTIVATION_FAILURE": "ACME sertifikaadi automaatse aktiveerimise ebaõnnestumise teavitused"
+    },
+      "types": "Meili teavituste tüübid"
+    },
+    "maintenanceMode": {
+      "enableTitle": "Lülita hooldusrežiim sisse",
+      "enableConfirm": "Kas sa soovid hooldusrežiimi sisse lülitada?",
+      "enableSuccess": "Hooldusrežiimi sisse lülitamine on töös",
+      "disableTitle": "Lülita hooldusrežiim välja",
+      "disableConfirm": "Kas sa soovid hooldusrežiimi välja lülitada?",
+      "disableSuccess": "Hooldusrežiimi välja lülitamine on töös",
+      "forbiddenEnable": "Hooldusrežiimi ei saa haldusteenuse pakkuja jaoks sisse lülitada",
+      "label": "Hooldusrežiim:",
+      "status": {
+        "DISABLED_MAINTENANCE_MODE": "Hooldusrežiim on välja lülitatud",
+        "ENABLED_MAINTENANCE_MODE": "Hooldusrežiim on sisse lülitatud",
+        "PENDING_DISABLE_MAINTENANCE_MODE": "Hooldusrežiimi välja lülitamise taotlus on saadetud",
+        "PENDING_ENABLE_MAINTENANCE_MODE": "Hooldusrežiimi sisse lülitamise taotlus on saadetud"
+      }
     },
     "message": "Sõnum",
     "nextUpdate": "Järgmine värskendus",
@@ -240,6 +282,16 @@
       "title": "OCSP vastajad"
     },
     "previousUpdate": "Eelmine värskendus",
+    "proxyMemoryUsage": {
+      "alertOverThreshold": "Hoiatus: Proxy teenuse mälukasutus on üle seadistatud väärtuse",
+      "max": "Maksimaalne maht",
+      "ok": "Kõik korras",
+      "threshold": "Limiit",
+      "title": "Proxy teenuse mälu kasutus",
+      "total": "Eraldatud mälu koguväärtus",
+      "usagePercent": "Kasutatud maht (%)",
+      "used": "Kasutatud maht"
+    },
     "serviceUrl": "Teenuse URL",
     "status": "Olek",
     "timestamping": {
@@ -313,15 +365,13 @@
     },
     "action_not_possible": "Toiming pole võimalik",
     "additional_member_already_exists": "Täiendav liige on juba olemas",
+    "already_disabled_maintenance_mode": "Hooldusrežiim on juba välja lülitatud",
+    "already_enabled_maintenance_mode": "Hooldusrežiim on juba sisse lülitatud",
     "anchor_already_exists": "Ankur on juba olemas",
     "anchor_file_not_found": "Ankrufaili ei leitud",
     "anchor_not_found": "Ankrut ei leitud",
     "anchor_upload_failed": "Ankru üleslaadimine ebaõnnestus",
-    "api_key_not_found": "API võtit ei leitud",
     "auth_cert_not_supported": "Autentimissertifikaati ei toetata",
-    "backup_file_not_found": "Varufaili ei leitud",
-    "backup_generation_failed": "Varukoopia loomine ebaõnnestus",
-    "backup_restore_interrupted": "Varukoopia taastamine katkestatud",
     "base_endpoint_not_found": "Baasotspunkti ei leitud",
     "ca_cert_status_processing_failure": "CA sertifikaadi oleku töötlemine ebaõnnestus",
     "cannot_delete_owner": "Omanikku ei saa kustutada",
@@ -362,6 +412,8 @@
     "duplicate_accessright": "Dubleeri pääsuõigus",
     "endpoint_already_exists": "Otspunkt on juba olemas",
     "endpoint_not_found": "Otspunkti ei leitud",
+    "forbidden_disable_management_service_client": "Haldusteenuste pakkujat ei saa välja lülitada",
+    "forbidden_enable_maintenance_mode_for_management_service": "Haldusteenuste pakkujat ei saa välja lülitada",    
     "global_conf_download_request_failed": "Globaalse konfiguratsiooni allalaadimise päring ebaõnnestus",
     "global_conf_outdated": "Globaalne konfiguratsioon on aegunud",
     "gpg_key_generation_failed": "GPG võtmepaari loomine ebaõnnestus",
@@ -439,7 +491,8 @@
     "addClient": {
       "memberClass": "Liikmeklass",
       "memberCode": "Liikmekood",
-      "subsystemCode": "Alamsüsteemi kood"
+      "subsystemCode": "Alamsüsteemi kood",
+      "subsystemName": "Subsystem Name"
     },
     "certificationService": "Sertifitseerimisteenus",
     "clientAdd": {
@@ -460,6 +513,7 @@
     "keys": {
       "name": "Nimi"
     },
+    "maintenanceModeMessage": "Maintenance mode message",
     "memberCode": "Liikmekood",
     "path": "asukoht",
     "pin": "PIN",
@@ -493,7 +547,8 @@
     "name": "Nimi",
     "subsystem": "alamsüsteem",
     "subsystemCode": "Alamsüsteemi kood",
-    "type": "Tüüp"
+    "type": "Tüüp",
+    "undefinedSubsystemName": "määramata"
   },
   "global": {
     "appTitle": "X-Road turvaserver"
@@ -588,8 +643,10 @@
     "helpTitleSS": "Turvaserveri TLS sertifikaat",
     "id": "ID",
     "importCert": "Impordi sert.",
+    "importCertOcspVerifyWarning": "Sertifikaati ei õnnestunud aktiveerida, sest OCSP vastust ei saanud valideerida. Veateade: {errorMessage}",
     "importCertSuccess": "Sertifikaadi üleslaadimine õnnestus",
     "incorrectPin": "Vale PIN. Palun proovige uuesti.",
+    "keyAlgorithm": "Key Algorithm:",    
     "keyDeleted": "Võti kustutatud",
     "keyId": "Võtme ID:",
     "keyInfo": "Võtme teave",
@@ -663,7 +720,8 @@
     "removeAllTitle": "Eemalda kõik liikmed?",
     "removeText": "Kas olete kindel, et soovite selle liikme eemaldada?",
     "removeTitle": "Eemalda liige?",
-    "searchOptions": "Valikute otsimine"
+    "searchOptions": "Valikute otsimine",
+    "subsystemName": "Alamsüsteemi Nimi"
   },
   "localGroups": {
     "addGroup": "Lisa rühm",
@@ -945,7 +1003,8 @@
       "memberNameTooltip": "Liikmeorganisatsiooni nimi.",
       "register": "Registreeri klient",
       "searchLabel": "Klient",
-      "subsystemCodeTooltip": "Alamsüsteemi kood, mis identifitseerib liikmele kuuluva infosüsteemi."
+      "subsystemCodeTooltip": "Alamsüsteemi kood, mis identifitseerib liikmele kuuluva infosüsteemi.",
+      "subsystemNameTooltip": "Infosüsteemi nimi, mida alamsüsteem X-teel esindab."
     },
     "clientDetails": "Kliendi detailid",
     "clientInfo1": "Täpsustage kliendi detailid, keda te soovite lisada.",
